fix: shift museum title to top: 2px for better normal window clearance

--- a/style.css
+++ b/style.css
@@ -454,7 +454,7 @@ body {
 
 #sec-museo > .text-center {
   position: absolute;
-  top: 12px;
+  top: 2px;
   left: 50%;
   transform: translateX(-50%);
   z-index: 20;
